put display:none; on the .cke_path that displays the DOM path beneath the editor. Tom asked me to and I basically agree that Apostrophe users don't need to care or see that bit if info. It's just "extra"
git-svn-id: http://svn.apostrophenow.org/plugins/apostropheCkEditorPlugin/trunk@4362 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/js/ckeditor/skins/adefault/editor.css
+++ b/web/js/ckeditor/skins/adefault/editor.css
@@ -1018,6 +1018,7 @@ display: none;
 display: inline-block;
 float: left;
 margin-top: 5px;
+display: none;
 }
 .cke_skin_adefault .cke_rtl .cke_path {
 float: right;
