maximize style needed adjustment
git-svn-id: http://svn.apostrophenow.org/plugins/apostropheCkEditorPlugin/trunk@4444 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/js/ckeditor/skins/adefault/editor.css
+++ b/web/js/ckeditor/skins/adefault/editor.css
@@ -93,6 +93,15 @@ display: block;
 _display: inline-block;
 padding: 5px;
 }
+
+.cke_skin_adefault .cke_maximized .cke_wrapper
+{
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  background: #efefef !important;  
+}
+
 .cke_shared .cke_skin_adefault .cke_wrapper {
 padding-bottom: 0;
 }
